Windows L&F added to all frames

--- a/src/teaeli/AddNewOrder.form
+++ b/src/teaeli/AddNewOrder.form
@@ -138,9 +138,9 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="tblMasterPlanScrollPane" min="-2" pref="233" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="btnCancelOrder" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnCnfirmOrder" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="btnCancelOrder" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
